# C-Language

Algorithm/: a.out  practic5.c
Algorithm/Practic6/: a.out  practic6.c
College/Semestr1/pr2/: main.c
College/Semestr1/pr6/: main.c
College/Semestr2/pr10/: main.c
College/Semestr2/pr11/: binary_tree.c  binary_tree.h  main.c  node_list_for_students.c  node_list_for_students.h
College/Semestr2/pr11-h/: CMakeLists.txt  binary_tree.c  main.c  student_fields_macroses.h
College/Semestr2/pr11_g/: CMakeLists.txt  binary_tree.c  binary_tree.h  main.c
College/Semestr2/pr12-16/: Makefile  main.c  program
College/Semestr2/pr14/: main.c
College/Semestr2/pr9/: calculator.c
College/Semestr2/tools_12_16/: tools.c
College/Семестр1/pr1/: main.c
College/Семестр1/pr3/: main.c
College/Семестр1/pr5/: main.c
College/Семестр1/pr7/: main.c
College/Семестр2/pr10/: main.c  node_list_for_students.h  struct_student.h
DataStructures/HashMap/: keys_map.h
Studies/Semestr2/pr12-16/: CMakeLists.txt  Makefile  main.c  output.txt  program
Studies/Semestr2/pr12-16/Core/Application/: file_context.h  logging.h  node_list.h  reads_log.h  universal_pointer.h
Studies/Semestr2/pr12-16/Core/Domain/: student.h
Studies/Semestr2/pr12-16/Services/: file_context.c  logging.c  node_list.c  reads_log.c
Studies/Semestr2/pr12-16/domain/business_logic/: file_context.h  logging.h  node.h  node_list.h
Studies/Semestr2/pr12-16/domain/model/: student.h
Studies/Semestr2/pr12-16/services/: file_context.c  logging.c  node_list.c
Studies/Semestr2/pr12-16/tools/: tools.c  tools.h
(+24 files in other folders)
